--- a/src/webapps/WEB-INF/web.xml
+++ b/src/webapps/WEB-INF/web.xml
@@ -1,11 +1,22 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+<?xml version="1.0" encoding="UTF-8"?>
+
+<web-app
+    xmlns="https://jakarta.ee/xml/ns/jakartaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="
+        https://jakarta.ee/xml/ns/jakartaee
+        https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+    version="5.0">
+
     <servlet>
         <servlet-name>GlobalRequestServlet</servlet-name>
         <servlet-class>servlet.GlobalRequestServlet</servlet-class>
+        <multipart-config/>
     </servlet>
-    
+
     <servlet-mapping>
         <servlet-name>GlobalRequestServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 </web-app>
